# mcp-for-docs

./: .gitignore  Dockerfile  README.md  libraries.txt  pyproject.toml  requirements.txt  todo.md
.cursor/: mcp.json
.github/workflows/: deploy.yml
qdrant_docs_mcp/: __init__.py  log.py  main.py  server.py
qdrant_docs_mcp/libraries/: Pillow.json  aiohttp.json  click.json  dash.json  django.json  docling.json  fastapi.json  fastembed.json  fastmcp.json  gradio.json  jinja.json  matplotlib.json  networkx.json  nltk.json  numpy.json  onnx.json  opencv.json  pandas.json  peft.json  plotly.json  polars.json  pydantic.json  pytest.json  python.json  pytorch-lightning.json  pytorch.json  qdrant-client-python.json  requests.json  rich.json  scikit-image.json  scikit-learn.json  scipy.json  scrapy.json  seaborn.json  tensorflow.json  textual.json  torchvision.json  tqdm.json  transformers.json
qdrant_docs_mcp/tools/: encode_snippets.py  extractor.py  importer.py  models.py  server.py
