[project]
name = "qdrant-docs-mcp"
version = "0.1.0"
description = "Qdrant Documentation MCP"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp-server-qdrant",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38" 

[tool.uv.sources]
mcp-server-qdrant = { git = "https://github.com/qdrant/mcp-server-qdrant.git" }

[project.scripts]
mcp-for-docs = "qdrant_docs_mcp.main:main"
