[project]
name = "mcp-for-docs"
version = "0.1.0"
description = "Qdrant Documentation MCP"
authors = [
    {name = "Qdrant Team", email = "info@qdrant.tech"}
]
dependencies = [
    "mcp-server-qdrant",
    "fastmcp>=2.9.0",
    "rich>=14.0.0",
    "pydantic>=2.11.7",
    "rst-to-myst==0.4.0",
    "markdown-it-py<3.dev0",
    "sphinx>=7.3.7",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.uv.sources]
mcp-server-qdrant = { git = "https://github.com/qdrant/mcp-server-qdrant.git", branch = "master" }

[project.scripts]
mcp-for-docs = "qdrant_docs_mcp.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["qdrant_docs_mcp"]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
